objects/GF_NDA_Signatories__c.object
<CustomObject>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Design Solutions</fullName>
                </value>
                <value>
                    <fullName>Technology Development</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Signatory_Name__c</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDA_Type__c</fullName>
        <label>NDA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer NDA</fullName>
                </value>
                <value>
                    <fullName>DS NDA</fullName>
                </value>
                <value>
                    <fullName>TD NDA</fullName>
                </value>
                <value>
                    <fullName>GENERAL NDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The region where the other party is located</description>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US East</fullName>
                </value>
                <value>
                    <fullName>US West</fullName>
                </value>
                <value>
                    <fullName>Qualcomm</fullName>
                </value>
                <value>
                    <fullName>China/Taiwan</fullName>
                </value>
                <value>
                    <fullName>Japan/Korea</fullName>
                </value>
                <value>
                    <fullName>EMEA/Rest of Asia</fullName>
                </value>
                <value>
                    <fullName>Designs Solutions US</fullName>
                </value>
                <value>
                    <fullName>Designs Solutions SGP</fullName>
                </value>
                <value>
                    <fullName>Designs Solutions DRS</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>SGP</fullName>
                </value>
                <value>
                    <fullName>DRS</fullName>
                </value>
                <value>
                    <fullName>FAB 11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signatory_Email__c</fullName>
        <label>Signatory Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Signatory_Name__c</fullName>
        <label>Signatory Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GF_NDA_Signatories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GF NDA Signatories</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Signatory_Email__c</columns>
        <columns>Signatory_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GF NDA Signatories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>